# picmi

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AMI_Standard.md  Authors.md  Legal.txt  License.txt  PICAPI_Standard.md  PICMI_Standard.md  README.md  Standard.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
Docs/: Makefile  requirements.txt
Docs/source/: conf.py  index.rst
Docs/source/developer/: design_principles.rst  developer.rst  general_class_design.rst
Docs/source/how_to_use/: how_to_use.rst  implementing.rst  using.rst
Docs/source/standard/: applied_field.rst  constants.rst  diagnostics.rst  distribution.rst  field.rst  grid.rst  interactions.rst  ionization.rst  laser_injectors.rst  laser_profiles.rst  layout.rst  simulation.rst  species.rst  standard.rst
Examples/laser_acceleration/: laser_acceleration_2d_PICMI.py  laser_acceleration_PICMI.py  lpa_boostedframe_PICMI.py
Examples/plasma_acceleration/: laser_acceleration_PICMI.py
PICMI_Python/: README.md  __init__.py  applied_fields.py  base.py  constants.py  diagnostics.py  fields.py  interactions.py  lasers.py  particles.py  picmi_types.py  requirements.txt  setup.py  simulation.py
PICMI_Python/.github/workflows/: publish-to-pypi.yml
Python/: CODATA2010.py  CODATA2014.py  PICMI.py  PICMI_MathConstants.py  PICMI_Particles.py  __init__.py  base.py  fields.py  lasers.py  particles.py  setup.py  simulation.py
Test/: README.md  launch_test.sh  picmistandard  prepare_test.py
Test/dummy_code/picmi/: __init__.py
Test/plasma_code/picmi/: __init__.py
Test/plasmacode/picmi/: __init__.py
Test/unit/: __main__.py  base.py
