[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools" ]

[project]
name = "picmistandard"
description = "Python base classes for PICMI standard"
readme = "README.md"
license = { file = "License.txt" }
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: User Interfaces",
]
dynamic = [ "version" ]
dependencies = [ "numpy>=1.15", "scipy~=1.5" ]
urls.Documentation = "https://picmi.readthedocs.io/en/latest"
urls.Repository = "https://github.com/picmi-standard/picmi"

[tool.setuptools]
packages = [ "picmistandard" ]
package-dir = { "picmistandard" = "PICMI_Python" }
dynamic.version = { attr = "PICMI_Python.version.__version__" }
